force-app/main/default/objects/Stock_Item__c/Stock_Item__c.object-meta.xml
<CustomObject>
    <description>Items that were or are are held in stock</description>
    <label>Stock Item</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>