force-app/main/default/objects/Stock_Item__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Notes from previous Inventory system for AU</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>