force-app/main/default/objects/Stock_Item__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>A = New from manufacturer
A1 = New used
B = Used few scratches
C = Used
D = Damaged/No longer usable</description>
    <inlineHelpText>A = New from manufacturer
A1 = New used
B = Used few scratches
C = Used
D = Damaged/No longer usable</inlineHelpText>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - New</fullName>
            </value>
            <value>
                <fullName>B - Used</fullName>
            </value>
            <value>
                <fullName>C - Testing</fullName>
            </value>
            <value>
                <fullName>D - Reparable</fullName>
            </value>
            <value>
                <fullName>E - Dead</fullName>
            </value>
            <value>
                <fullName>N - Brand New</fullName>
            </value>
            <value>
                <fullName>O - Ordered</fullName>
            </value>
            <value>
                <fullName>U - Undefined</fullName>
            </value>
            <value>
                <fullName>A - New from manufacturer</fullName>
            </value>
            <value>
                <fullName>A1 - New used</fullName>
            </value>
            <value>
                <fullName>B - Used few scratches</fullName>
            </value>
            <value>
                <fullName>C - Used</fullName>
            </value>
            <value>
                <fullName>D - Damaged/No longer usable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>