force-app/main/default/objects/Stock_Item__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Consignment is the parent of Stock Items, therefore 1 Consignment can have many Stock items eg, Devices</description>
    <label>Consignment</label>
    <referenceTo>Consignment__c</referenceTo>
    <relationshipLabel>Stock Items</relationshipLabel>
    <relationshipName>Stock_Items</relationshipName>
    <type>Lookup</type>
</CustomField>