force-app/main/default/objects/Stock_Item__c/fields/Date_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Date_Arrived__c</fullName>
    <description>The date when the ordered item was delivered into stock</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>