force-app/main/default/objects/Stock_Item__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <description>The date when the item was ordered for stock</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>