force-app/main/default/objects/Stock_Item__c/fields/Field_Agent_Owner__c.field-meta.xml
<CustomField>
    <fullName>Field_Agent_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To track the Stock Owner, In Case the stock Item Owner is selected as &quot;Field Agent&quot;</description>
    <label>Field Agent Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stock_Items</relationshipName>
    <type>Lookup</type>
</CustomField>