force-app/main/default/objects/Stock_Item__c/fields/Id_Account__c.field-meta.xml
<CustomField>
    <fullName>Id_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stock Items</relationshipLabel>
    <relationshipName>Stock_Items</relationshipName>
    <type>Lookup</type>
</CustomField>