force-app/main/default/objects/Stock_Item__c/fields/Inventory_Date__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Date__c</fullName>
    <label>Inventory Date</label>
    <type>Date</type>
</CustomField>