force-app/main/default/objects/Stock_Item__c/fields/Management_Number__c.field-meta.xml
<CustomField>
    <fullName>Management_Number__c</fullName>
    <label>Management Number</label>
    <type>TextArea</type>
</CustomField>