force-app/main/default/objects/Stock_Item__c/fields/Migration_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Account_Id__c</fullName>
    <label>Migration_Account_Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>