force-app/main/default/objects/Stock_Item__c/fields/Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Date__c</fullName>
    <description>The production date of the stock item</description>
    <label>Production Date</label>
    <type>Date</type>
</CustomField>