force-app/main/default/objects/Stock_Item__c/fields/Restaurant_Name__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Name__c</fullName>
    <label>Restaurant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>