force-app/main/default/objects/Stock_Item__c/fields/SIM_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>SIM_Mobile_Number__c</fullName>
    <label>SIM Mobile Number</label>
    <type>Phone</type>
</CustomField>