force-app/main/default/objects/Stock_Item__c/fields/Simcard_Number__c.field-meta.xml
<CustomField>
    <fullName>Simcard_Number__c</fullName>
    <description>SIM ID number</description>
    <label>SIM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>