force-app/main/default/objects/Stock_Item__c/fields/Simcard_Provider__c.field-meta.xml
<CustomField>
    <fullName>Simcard_Provider__c</fullName>
    <description>The provider of the SIM card</description>
    <label>SIM Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SKT</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>