force-app/main/default/objects/Stock_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>New - In Stock</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Shipping</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Retour in Progress</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Returned - at Manufacturer</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Writeoff</fullName>
            </value>
            <value>
                <fullName>Tested</fullName>
            </value>
            <value>
                <fullName>Returned - In Stock</fullName>
            </value>
            <value>
                <fullName>Awaiting Delivery/In Shipment</fullName>
            </value>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Exchange Requested</fullName>
            </value>
            <value>
                <fullName>Takeover</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Pick-up Needed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>