force-app/main/default/objects/Stock_Item__c/fields/Stock_Item_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item_Ownership__c</fullName>
    <description>Used to indicate Inventory Ownership</description>
    <label>Stock Item Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Field Agent</fullName>
            </value>
            <value>
                <fullName>HQ / office</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Warehouse ext.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>