force-app/main/default/objects/Stock_Item__c/fields/Total_Days_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_In_Use__c</fullName>
    <label>Total Days In Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>