force-app/main/default/objects/Stock_Item__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking-Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>