force-app/main/default/objects/Stock_Item__c/recordTypes/AT_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>AT_Stock_Item</fullName>
    <active>true</active>
    <label>AT Stock Item</label>
</RecordType>