force-app/main/default/objects/Stock_Item__c/recordTypes/CD_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>CD_Stock_Item</fullName>
    <active>true</active>
    <label>CD Stock Item</label>
</RecordType>