force-app/main/default/objects/Stock_Item__c/recordTypes/CZ_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>CZ_Stock_Item</fullName>
    <active>true</active>
    <description>Czech Republic Stock item</description>
    <label>CZ Stock Item</label>
</RecordType>