force-app/main/default/objects/Stock_Item__c/recordTypes/DH_AU_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Stock_Item</fullName>
    <active>true</active>
    <description>Delivery Hero Australia Stock Items</description>
    <label>DH AU Stock Item</label>
</RecordType>