force-app/main/default/objects/Stock_Item__c/recordTypes/FI_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>FI_Stock_Item</fullName>
    <active>true</active>
    <label>FI Stock Item</label>
</RecordType>