force-app/main/default/objects/Stock_Item__c/recordTypes/FP_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>FP_Stock_Item</fullName>
    <active>true</active>
    <label>FP Stock Item</label>
</RecordType>