force-app/main/default/objects/Stock_Item__c/recordTypes/HU_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>HU_Stock_Item</fullName>
    <active>true</active>
    <description>Hungary Stock item</description>
    <label>HU Stock Item</label>
</RecordType>