force-app/main/default/objects/Stock_Item__c/recordTypes/SE_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>SE_Stock_Item</fullName>
    <active>true</active>
    <label>SE Stock Item</label>
</RecordType>