force-app/main/default/objects/Stock_Item__c/recordTypes/Talabat_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Stock_Item</fullName>
    <active>true</active>
    <label>Talabat Stock Item</label>
</RecordType>