force-app/main/default/objects/Stock_Item__c/recordTypes/UK_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>UK_Stock_Item</fullName>
    <active>true</active>
    <label>UK Stock Item</label>
</RecordType>