force-app/main/default/objects/Stock_Item__c/recordTypes/Yogiyo_Stock_Item.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Stock_Item</fullName>
    <active>true</active>
    <description>Yogiyo Stock Items</description>
    <label>Yogiyo Stock Item</label>
</RecordType>