force-app/main/default/objects/Stock_Item__c/validationRules/Field_Agent_Owner_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Agent_Owner_is_Required</fullName>
    <active>true</active>
    <description>Field Agent Owner is required when Stock Ownership = Field Agent</description>
    <errorConditionFormula>ISBLANK(Field_Agent_Owner__c) &amp;&amp; ISPICKVAL( Stock_Item_Ownership__c , &quot;Field Agent&quot;)</errorConditionFormula>
    <errorDisplayField>Field_Agent_Owner__c</errorDisplayField>
    <errorMessage>Field Agent Owner is required when Ownership = Field Agent</errorMessage>
</ValidationRule>