force-app/main/default/objects/Stock_Item__c/listViews/Assigned_AU.listView-meta.xml
<ListView>
    <fullName>Assigned_AU</fullName>
    <columns>NAME</columns>
    <columns>Id_Account__c</columns>
    <columns>Comments__c</columns>
    <columns>Condition__c</columns>
    <columns>Date_Arrived__c</columns>
    <columns>Status__c</columns>
    <columns>Simcard_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Stock_Item__c.DH_AU_Stock_Item</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Assigned,Delivered</value>
    </filters>
    <label>AU - Assigned Or Delivered</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>DH_AU_Management</roleAndSubordinates>
    </sharedTo>
</ListView>