force-app/main/default/objects/Stock_Item__c/listViews/CD_Stock_Items.listView-meta.xml
<ListView>
    <fullName>CD_Stock_Items</fullName>
    <columns>NAME</columns>
    <columns>Condition__c</columns>
    <columns>Simcard_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Stock_Item_Ownership__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Stock_Item__c.CD_Stock_Item</value>
    </filters>
    <label>CD Stock Items</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>CD_Management</roleAndSubordinates>
    </sharedTo>
</ListView>