force-app/main/default/objects/Stock_Item__c/listViews/FI_Stock_Items_Lost.listView-meta.xml
<ListView>
    <fullName>FI_Stock_Items_Lost</fullName>
    <columns>NAME</columns>
    <columns>Simcard_Number__c</columns>
    <columns>Restaurant_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Condition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Stock_Item__c.FI_Stock_Item</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Lost</value>
    </filters>
    <label>FI - Stock Items - Lost</label>
    <language>en_US</language>
    <sharedTo>
        <role>FI_Customer_Care_Team</role>
        <role>FI_Management</role>
    </sharedTo>
</ListView>