force-app/main/default/objects/Stock_Item__c/listViews/FP_Stock.listView-meta.xml
<ListView>
    <fullName>FP_Stock</fullName>
    <columns>NAME</columns>
    <columns>Simcard_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Tracking_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>SIM_Mobile_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>laura</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>sim</value>
    </filters>
    <label>FP Stock</label>
    <language>en_US</language>
    <sharedTo>
        <group>Salesforce_Admin</group>
    </sharedTo>
</ListView>