force-app/main/default/objects/Stock_Item__c/listViews/Recycled.listView-meta.xml
<ListView>
    <fullName>Recycled</fullName>
    <columns>NAME</columns>
    <columns>Simcard_Number__c</columns>
    <columns>Simcard_Provider__c</columns>
    <columns>Status__c</columns>
    <columns>Condition__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Recycled</value>
    </filters>
    <label>Recycled</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>DH_AU_Management</roleAndSubordinates>
    </sharedTo>
</ListView>