force-app/main/default/objects/Stock_Item__c/listViews/Retour_in_Progress.listView-meta.xml
<ListView>
    <fullName>Retour_in_Progress</fullName>
    <columns>NAME</columns>
    <columns>Simcard_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Condition__c</columns>
    <columns>Comments__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Retour in Progress</value>
    </filters>
    <label>Retour in Progress</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>DH_AU_Management</roleAndSubordinates>
    </sharedTo>
</ListView>